View Issue Details

IDProjectCategoryView StatusLast Update
0026668Open CASCADEOCCT:Codingpublic2016-04-20 15:48
ReporterskiAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version7.0.0Fixed in Version7.0.0 
Summary0026668: Eliminate compile warnings obtained by building occt with vc14: conversion requires a narrowing conversion
DescriptionNext warnings appears during occt compilation with vc14:

..\src\IVtkVTK\IVtkVTK_ShapeData.cxx(95): warning C4838: conversion from 'const IVtk_PointId' to 'vtkIdType' requires a narrowing conversion
..\src\IVtkVTK\IVtkVTK_ShapeData.cxx(142): warning C4838: conversion from 'const IVtk_PointId' to 'vtkIdType' requires a narrowing conversion
Steps To ReproduceTry to compile occt with vc14 and vtk (Visual Studio 2015)
TagsNo tags attached.
Test case numberNot needed

Relationships

related to 0026207 closedbugmaster VIS - compiler warnings on 64-bit build 

Activities

git

2015-09-09 13:07

administrator   ~0045308

Branch CR26668 has been created by ski.

SHA-1: 9c31d8835434e5e2cbca5e48ab4eb2f6abbe6fdf


Detailed log of new commits:

Author: ski
Date: Wed Sep 9 11:54:02 2015 +0300

    0026668: Eliminate compile warnings obtained by building occt with vc14: conversion requires a narrowing conversion
    
    Warnings "conversion requires a narrowing conversion" were eliminated.

ski

2015-09-09 14:21

developer   ~0045321

Warnings were fixed on vc14.

abv

2015-09-10 06:20

manager   ~0045361

Sergey, please have a look at the fix and consider my question: why IVtk_IdType is defined as Standard_Size and not vtkIdType (that would be natural)?

san

2015-09-10 12:24

developer   ~0045396

Initially, IVtk package did not depend on any VTK types.
However, with the current packaging this does not make any sense, so it is logical to define IVtk_IdType via vtkIdType rather than add numerous explicit typecasts to the code.

git

2015-09-25 13:29

administrator   ~0046127

Branch CR26668 has been updated by rkv.

SHA-1: f5415d2b381e53ff1b5374bd4a1eb93a5b838189


Detailed log of new commits:

Author: rkv
Date: Fri Sep 25 13:26:45 2015 +0300

    IVtk_IdType is defined via vtkIdType from now.

abv

2015-09-25 19:16

manager   ~0046163

No remarks, please test

git

2015-09-25 20:20

administrator   ~0046171

Branch CR26668 has been updated forcibly by mkv.

SHA-1: 420bfcee3fe7118b78be297937ca4bbbfda043d9

kgv

2015-09-25 20:44

developer   ~0046174

Dear rkv,

-  SM_None      = -1, //!< No selection
-  SM_Shape     =  0, //!< Shape selection
-  SM_Vertex    =  1, //!< Vertex selection
-  SM_Edge      =  2, //!< Edge selection
-  SM_Wire      =  3, //!< Wire selection
-  SM_Face      =  4, //!< Face selection
-  SM_Shell     =  5, //!< Shell selection
-  SM_Solid     =  6, //!< Solid selection
-  SM_CompSolid =  7, //!< CompSolid selection
-  SM_Compound  =  8, //!< Compound selection
+  SM_None = -1, //!< No selection
+  SM_Shape = 0, //!< Shape selection
+  SM_Vertex = 1, //!< Vertex selection
+  SM_Edge = 2, //!< Edge selection
+  SM_Wire = 3, //!< Wire selection
+  SM_Face = 4, //!< Face selection
+  SM_Shell = 5, //!< Shell selection
+  SM_Solid = 6, //!< Solid selection
+  SM_CompSolid = 7, //!< CompSolid selection
+  SM_Compound = 8, //!< Compound selection
...
-  MT_Undefined     = -1, //!< Undefined
-  MT_IsoLine       =  0, //!< Isoline
-  MT_FreeVertex    =  1, //!< Free vertex
-  MT_SharedVertex  =  2, //!< Shared vertex
-  MT_FreeEdge      =  3, //!< Free edge
-  MT_BoundaryEdge  =  4, //!< Boundary edge (related to a single face)
-  MT_SharedEdge    =  5, //!< Shared edge (related to several faces)
-  MT_WireFrameFace =  6, //!< Wireframe face
-  MT_ShadedFace    =  7  //!< Shaded face
+  MT_Undefined = -1, //!< Undefined
+  MT_IsoLine = 0, //!< Isoline
+  MT_FreeVertex = 1, //!< Free vertex
+  MT_SharedVertex = 2, //!< Shared vertex
+  MT_FreeEdge = 3, //!< Free edge
+  MT_BoundaryEdge = 4, //!< Boundary edge (related to a single face)
+  MT_SharedEdge = 5, //!< Shared edge (related to several faces)
+  MT_WireFrameFace = 6, //!< Wireframe face
+  MT_ShadedFace = 7  //!< Shaded face
...
-  DM_Shading   = 1  //!< Shaded display mode
+  DM_Shading = 1  //!< Shaded display mode

what is the purpose of these modifications within this patch?
Please revert them.

mkv

2015-09-28 12:04

tester   ~0046196

Dear BugMaster,
Branch CR2668 was rebased on branch IR-2015-09-24 of occt git-repository.
SHA-1: 420bfcee3fe7118b78be297937ca4bbbfda043d9

mkv

2015-09-28 12:05

tester   ~0046197

Dear BugMaster,
Branch CR2668 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 420bfcee3fe7118b78be297937ca4bbbfda043d9

There are following compilation errors:
Linux:
http://jenkins-test-01.nnov.opencascade.com:8080/view/CR26668-master/job/CR26668-master_build_occt_linux/1/parsed_console/
...
../../../../src/IVtkOCC/IVtkOCC_ShapePickerAlgo.cxx:345:53: required from here
../../../../inc/NCollection_DefaultHasher.hxx:30:33: error: call of overloaded 'HashCode(const long long int&, const Standard_Integer&)' is ambiguous
...

Number of compiler warnings:

occt component :
Windows: 0 (0 on master)

products component :
Windows: 0 (0 on master)

mkv

2015-09-28 12:05

tester   ~0046198

Dear rkv,
Branch CR2668 has been rejected due to:
- compilation errors

git

2015-09-29 18:31

administrator   ~0046287

Branch CR26668 has been updated by rkv.

SHA-1: 60ae4974b2106b96fab99845a1880ffa7dc19baa


Detailed log of new commits:

Author: rkv
Date: Tue Sep 29 18:30:14 2015 +0300

    Merge branch 'CR26668' of git.dev.opencascade.org:occt into CR26668
    
    Conflicts:
        src/IVtk/IVtk_Types.hxx

Author: rkv
Date: Tue Sep 29 18:23:05 2015 +0300

    0026668: Eliminate compile warnings obtained by building occt with vc14: conversion requires a narrowing conversion
    
    Warnings "conversion requires a narrowing conversion" were eliminated.
    
    IVtk_IdType is defined via vtkIdType from now.
    
    Check of target platform for used VTK libraries is added.

git

2015-09-30 10:01

administrator   ~0046310

Branch CR26668 has been updated forcibly by rkv.

SHA-1: d7d1a8a03f75abbc9a8b9d885e95f114f98d4d56

kgv

2015-10-05 11:55

developer   ~0046442

Please test the patch on all platforms supporting IVtk.

git

2015-10-05 13:13

administrator   ~0046449

Branch CR26668 has been updated forcibly by mkv.

SHA-1: 7c24dbf221ee170f03e9c31e2c336ed7b9af3115

mkv

2015-10-05 16:08

tester   ~0046476

Dear BugMaster,
Branch CR26668 was rebased on current master of occt git-repository.
SHA-1: 7c24dbf221ee170f03e9c31e2c336ed7b9af3115

mkv

2015-10-05 16:08

tester   ~0046477

Dear BugMaster,
Branch CR26668 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode.
SHA-1: 7c24dbf221ee170f03e9c31e2c336ed7b9af3115

There are following compilation errors:
Linux:
http://jenkins-test-01.nnov.opencascade.com:8080/view/CR26668-master/job/CR26668-master_build_occt_linux/1/parsed_console/
../../../../inc/NCollection_DefaultHasher.hxx:30:33: error: call of overloaded 'HashCode(const long long int&, const Standard_Integer&)' is ambiguous

git

2015-10-07 10:07

administrator   ~0046541

Branch CR26668 has been updated by rkv.

SHA-1: d56173367c8cb31bea0690fc24bf34acce33b065


Detailed log of new commits:

Author: rkv
Date: Wed Oct 7 10:07:19 2015 +0300

    HashCode for long long is moved into Standard-Integer

kgv

2015-10-12 13:32

developer   ~0046675

Dear bugmaster,

please also switch to tested (see 0026585).

git

2015-10-16 16:28

administrator   ~0046951

Branch CR26668 has been deleted by kgv.

SHA-1: d56173367c8cb31bea0690fc24bf34acce33b065

Related Changesets

occt: master ee9e67ed

2015-09-30 06:36:04

rkv


Committer: bugmaster Details Diff
0026668: Eliminate compile warnings obtained by building occt with vc14: conversion requires a narrowing conversion

Warnings "conversion requires a narrowing conversion" were eliminated: IVtk_IdType is defined via vtkIdType from now.

Check of bitness of VTK libraries is added, to ensure that OCCT and VTK use the same bitness.

HashCode() function for long long int added in Standard_Integer.hxx to handle 64-bit integers
Affected Issues
0026668
mod - src/IVtk/IVtk_Types.hxx Diff File
mod - src/Standard/Standard_Integer.hxx Diff File

Issue History

Date Modified Username Field Change
2015-09-09 12:59 ski New Issue
2015-09-09 12:59 ski Assigned To => ski
2015-09-09 13:00 ski Status new => assigned
2015-09-09 13:07 git Note Added: 0045308
2015-09-09 14:21 ski Note Added: 0045321
2015-09-09 14:21 ski Assigned To ski => abv
2015-09-09 14:21 ski Status assigned => resolved
2015-09-10 06:17 abv Assigned To abv => san
2015-09-10 06:20 abv Note Added: 0045361
2015-09-10 12:24 san Note Added: 0045396
2015-09-10 12:24 san Assigned To san => ski
2015-09-10 12:24 san Status resolved => assigned
2015-09-21 07:02 abv Assigned To ski => rkv
2015-09-25 01:04 abv Relationship added related to 0026207
2015-09-25 13:29 git Note Added: 0046127
2015-09-25 13:34 rkv Assigned To rkv => abv
2015-09-25 13:34 rkv Status assigned => resolved
2015-09-25 19:16 abv Note Added: 0046163
2015-09-25 19:16 abv Assigned To abv => bugmaster
2015-09-25 19:16 abv Status resolved => reviewed
2015-09-25 20:20 git Note Added: 0046171
2015-09-25 20:22 mkv Assigned To bugmaster => mkv
2015-09-25 20:44 kgv Note Added: 0046174
2015-09-28 12:04 mkv Note Added: 0046196
2015-09-28 12:05 mkv Note Added: 0046197
2015-09-28 12:05 mkv Assigned To mkv => rkv
2015-09-28 12:05 mkv Status reviewed => assigned
2015-09-28 12:05 mkv Note Added: 0046198
2015-09-29 18:31 git Note Added: 0046287
2015-09-30 10:01 git Note Added: 0046310
2015-09-30 10:11 rkv Assigned To rkv => kgv
2015-09-30 10:11 rkv Status assigned => resolved
2015-10-05 11:55 kgv Note Added: 0046442
2015-10-05 11:55 kgv Assigned To kgv => bugmaster
2015-10-05 11:55 kgv Status resolved => reviewed
2015-10-05 13:13 git Note Added: 0046449
2015-10-05 13:25 mkv Assigned To bugmaster => mkv
2015-10-05 16:08 mkv Note Added: 0046476
2015-10-05 16:08 mkv Note Added: 0046477
2015-10-05 16:08 mkv Assigned To mkv => rkv
2015-10-05 16:08 mkv Status reviewed => assigned
2015-10-05 16:09 mkv Test case number => Not needed
2015-10-07 10:07 git Note Added: 0046541
2015-10-07 10:10 rkv Assigned To rkv => kgv
2015-10-07 10:10 rkv Status assigned => resolved
2015-10-12 13:32 kgv Note Added: 0046675
2015-10-12 13:32 kgv Assigned To kgv => bugmaster
2015-10-12 13:32 kgv Status resolved => feedback
2015-10-13 16:00 bugmaster Status feedback => tested
2015-10-16 13:18 bugmaster Changeset attached => occt master ee9e67ed
2015-10-16 13:18 bugmaster Status tested => verified
2015-10-16 13:18 bugmaster Resolution open => fixed
2015-10-16 16:28 git Note Added: 0046951
2016-04-20 15:44 aiv Fixed in Version => 7.0.0
2016-04-20 15:48 aiv Status verified => closed